# PrimeGen

Client-Android/app/: build.gradle
Client-Android/app/src/androidTest/java/edu/ufrgs/primegen/: ExampleInstrumentedTest.java
Client-Android/app/src/main/: AndroidManifest.xml
Client-Android/app/src/main/java/edu/ufrgs/primegen/: Block.java  Connection.java  ConsoleHandler.java  MainActivity.java  Manager.java
Client-Android/app/src/main/res/layout/: activity_main.xml
Client-Android/app/src/main/res/values/: strings.xml
Client-Android/gradle/wrapper/: gradle-wrapper.properties
Client-C++/: CMakeLists.txt
Client-C++/src/: Block.h  Connection.h  Manager.h  main.cpp
Client-Python/: block.py  connection.py  main.py  manager.py
Client-Rust/: Cargo.toml
Client-Rust/src/: main.rs
Client-Swift/: .gitignore  Podfile
Client-Swift/Client-Swift/: AppDelegate.swift  ConnectionManager.swift  Generator.swift  Info.plist  ViewController.swift
Client-Swift/Client-Swift.xcodeproj/: project.pbxproj
Client-Swift/Client-Swift.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Client-Swift/Client-Swift.xcodeproj/project.xcworkspace/xcuserdata/cblunardi.xcuserdatad/: UserInterfaceState.xcuserstate
Client-Swift/Client-Swift.xcodeproj/xcuserdata/cblunardi.xcuserdatad/xcschemes/: Client-Swift.xcscheme  xcschememanagement.plist
Client-Swift/Client-Swift.xcworkspace/: contents.xcworkspacedata
Client-Swift/Client-Swift/Base.lproj/: Main.storyboard
Server/: app.js  client.js  config.json  data.sql  package.json  scheduler.js
(+1 files in other folders)
